@@ -7,6 +7,7 @@ For next release
 * Add open_async() function for background file loading
 * Add new_mmap() function for fast creation of large files
 * Speed up mrcfile-header command line tool by reading headers only, not data
+* Allow opening of files with incorrect machine stamps in permissive mode
 * Update documentation to point to Python 3.6 instead of 2.7, and fix all
   cross-references
 
